# autoharness

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  autoharness.code-workspace  out.json  plugin.json  pyproject.toml  results.json  start.ps1  start.sh
.autoharness/: backlog-registry.yaml  config.yaml  harness-manifest.yaml  workspace-profile.yaml
.backlogit/: config.yaml  header-def.yaml  hooks_queue.jsonl  memories.json  stash.jsonl
.backlogit/archive/: 001-C.md  001-DL.md  001-S.md  001.001-T.md  001.002-T.md  001.003-T.md  001.004-T.md  001.005-T.md  001.006-T.md  001.007-T.md  002-DL.md  (+486 more)
.cursor/: mcp.json
.engram/: .workspace-id  config.toml  registry.yaml
.githooks/: README.md  pre-push  pre-push.ps1  pre-push.sh
.github/: copilot-instructions.md  copilot-review-instructions.md
docs/: ARCHITECTURE.md  backlog-integration.md  backlogit-compatibility-matrix.md  backlogit-graduation-checklist.md  backlogit-operating-model.md  capability-packs.md  copilot-review-gate.md  credits.md  environment-setup.md  gates-reference.md  getting-started.md  installation-guide.md  installation.md  primitives.md  reference-library.md  telemetry-reference.md  tuning-guide.md
schemas/: backlog-tool-registry.schema.json  capability-pack-registry.schema.json  community-template-registry.schema.json  execution-epoch.schema.json  harness-config.schema.json  harness-manifest.schema.json  tool-telemetry-event.schema.json  validation-gates.schema.json  workspace-profile.schema.json
scripts/: deploy-harness.ps1  deploy-harness.sh
templates/: harness-config.yaml.tmpl
tests/: test_agent_engram_instruction.py  test_capability_pack_enforcement_instruction.py  test_capability_pack_enforcement_verifier.py  test_capability_pack_registry.py  test_ci_template_rendering.py  test_copilot_code_review.py  test_deploy_harness_scripts.py  test_eval_boundaries.py  test_eval_cli.py  test_eval_matrix.py  test_eval_reviewer.py  test_eval_runner.py  test_eval_summary.py  test_gate_copilot_review_cli.py  test_gate_size_cli.py  test_gates_config.py  test_gates_copilot_review.py  test_gates_discovery.py  test_gates_feedback.py  test_gates_gate.py  test_gates_match.py  test_gates_runner.py  test_gates_sizing.py  test_graphtor_docs_full_suite.py  test_manifest_capability_pack_enum.py  test_telemetry_aggregation.py  test_telemetry_backlogit_sizing.py  test_telemetry_begin_context.py  test_telemetry_boundaries.py  test_telemetry_config.py  test_telemetry_docs.py  test_telemetry_epoch.py  test_telemetry_gitignore_template.py  test_telemetry_jsonl_sink.py  test_telemetry_reader.py  test_telemetry_record_cli.py  test_telemetry_reports.py  test_telemetry_schema_contracts.py  test_telemetry_ship_lifecycle.py  test_telemetry_sqlite_sink.py  (+3 more)
(+1239 files in other folders)
