[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoharness"
version = "1.1.6"
description = "Globally-installed agent harness framework that generates AI coding assistant primitives into any target workspace"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "softwaresalt" }]
keywords = ["ai", "agent", "harness", "copilot", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
autoharness = "autoharness.cli:main"

[project.urls]
Repository = "https://github.com/softwaresalt/autoharness"

[tool.hatch.build.targets.wheel]
packages = ["src/autoharness"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "src/autoharness/data/templates"
"schemas" = "src/autoharness/data/schemas"
".github/agents" = "src/autoharness/data/.github/agents"
".github/skills" = "src/autoharness/data/.github/skills"
".github/instructions" = "src/autoharness/data/.github/instructions"
".github/prompts" = "src/autoharness/data/.github/prompts"
".github/copilot-instructions.md" = "src/autoharness/data/.github/copilot-instructions.md"
".github/copilot-review-instructions.md" = "src/autoharness/data/.github/copilot-review-instructions.md"
"docs" = "src/autoharness/data/docs"
"AGENTS.md" = "src/autoharness/data/AGENTS.md"
